--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,23 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+  <img class="header-logo" src="../public/logo-green.png" alt="movalova logo" />
+  <nav class="header-nav">
+    <ul class="header-list">
+      <li class="header-list-item">
+        <a class="header-list-link">Наш підхід</a>
       </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+      <li class="header-list-item">
+        <a class="header-list-link">Наша засновниця</a>
+      </li>
+      <li class="header-list-item"><a class="header-list-link">Вчителі</a></li>
+      <li class="header-list-item"><a class="header-list-link">Ціни</a></li>
+      <li class="header-list-item"><a class="header-list-link">Відгуки</a></li>
+      <li class="header-list-item">
+        <a class="header-list-link">Записатись</a>
+      </li>
+      <li class="header-list-item">
+        <a class="header-list-link">Часті запитання</a>
       </li>
     </ul>
   </nav>
+  <button class="header-btn"><i width="30" class="bi bi-list"></i></button>
 </header>
