--- a/src/scss/common/_vars.scss
+++ b/src/scss/common/_vars.scss
@@ -1,4 +1,8 @@
-$_main_color: #242424;
-$_main_bg_color: rgba(255, 255, 255, 0.87);
-$_header_color: #747bff;
-$_header_accent_color: red;
+$_brand_color: #1c8040;
+$_secondary_color: #fff6be;
+$_text_color: #222323;
+$_white-color: #f6f5f5;
+$_hover-color: #186c36;
+$_background-color: #f1ebbf;
+$_accent-color: #118509;
+$_contrast-color: #801c5c;
