--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,30 +1,19 @@
 .header {
-  padding: 20px 0;
-}
-
-.nav-list {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-
-  @include media(tablet) {
-    justify-content: flex-start;
-  }
-
-  @include media(desktop) {
-    justify-content: flex-end;
-  }
+  justify-content: space-around;
 }
-
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  @include font(30, 40);
-  color: $_header_color;
+.header-logo {
+  width: 300px;
 }
-
-.nav-link:hover,
-.nav-link:focus {
-  color: $_header_accent_color;
+.header-nav {
+  display: none;
+}
+.header-list {
+}
+.header-list-item {
+}
+.header-list-link {
+}
+.header-btn {
+  width: 30px;
 }
