--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,13 @@
 @import './header.scss';
-@import './vite-promo.scss';
+@import './hero.scss';
+@import './advantages.scss';
+@import './founder.scss';
+@import './teachers.scss';
+@import './prices.scss';
+@import './booking.scss';
+@import './faq.scss';
+@import './products.scss';
+@import './footer.scss';
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -7,12 +15,35 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: $_text_color;
+  background-color: $_background-color;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+.container {
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-right: auto;
+  margin-left: auto;
+  @include media(desktop) {
+    width: 1200px;
+    padding: 96px 80px;
+  }
+}
+//bounce animation for hover
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.25);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
