fixing scss and imports

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <img src="../public//logo-beige.png" alt="movalova logo" />
+  <img src="./public//logo-beige.png" alt="movalova logo" />
   <div>
     <h3>Контакти</h3>
     <ul>
