--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <img class="header-logo" src="../public/logo-green.png" alt="movalova logo" />
+  <img class="header-logo" src="./public/logo-green.png" alt="movalova logo" />
   <nav class="header-nav">
     <ul class="header-list">
       <li class="header-list-item">
