--- a/src/scss/common/_vars.scss
+++ b/src/scss/common/_vars.scss
@@ -1,8 +1,8 @@
-$_brand_color: #1c8040;
-$_secondary_color: #fff6be;
-$_text_color: #222323;
-$_white-color: #f6f5f5;
-$_hover-color: #186c36;
-$_background-color: #f1ebbf;
-$_accent-color: #118509;
-$_contrast-color: #801c5c;
+$brand_color: #1c8040;
+$secondary_color: #fff6be;
+$text_color: #222323;
+$white-color: #f6f5f5;
+$hover-color: #186c36;
+$background-color: #f1ebbf;
+$accent-color: #118509;
+$contrast-color: #801c5c;
