--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,8 @@
 @use 'faq.scss';
 @use 'products.scss';
 @use 'footer.scss';
+@import 'common/vars';
+@import 'common/mixins';
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -15,8 +17,8 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: $_text_color;
-  background-color: $_background-color;
+  color: $text_color;
+  background-color: $background-color;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
