--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,8 @@
 <section class="container advantages">
-  <h2 class="advantages-title">Наш підхід</h2>
+  <div class="advantages-title-wrapper">
+    <span class="advantages-dot"></span>
+    <h2 class="advantages-title">Наш підхід</h2>
+  </div>
   <ul class="advantages-list">
     <li class="advantages-item">
       Уроки будуть зібрані на онлайн платформі Figmajam куди вам безкоштовно
