--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,21 +1,20 @@
-<footer>
-  <img src="./public//logo-beige.png" alt="movalova logo" />
-  <div>
-    <h3>Контакти</h3>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+<footer class="container footer">
+  <img class="footer-logo" src="./public//logo-beige.png" alt="movalova logo" />
+  <div class="footer-contacts">
+    <h3 class="contacts-title">Контакти</h3>
+    <ul class="contacts-list">
+      <li>your email</li>
+      <li>phone number</li>
     </ul>
   </div>
-  <div>
-    <ul>
-      <li>
+  <div class="footer-social">
+    <ul class="social-list">
+      <li class="social-item">
         <a href="https://www.instagram.com/mova.lovaa/"
           ><i class="bi bi-instagram"></i
         ></a>
       </li>
-      <li>
+      <li class="social-item">
         <a><i class="bi bi-telegram"></i></a>
       </li>
     </ul>
