--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,7 @@
 <header class="header">
-  <img class="header-logo" src="./public/logo-green.png" alt="movalova logo" />
+  <a href="/" class="header-logo">
+    <img src="./public/logo-beige.png" alt="movalova logo" />
+  </a>
   <nav class="header-nav">
     <ul class="header-list">
       <li class="header-list-item">
