--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,7 @@
 <section class="container hero">
   <h1 class="hero-title">
-    Відклади дзвінки друзям - ми тут для спілкування по душам in English
+    Відклади дзвінки друзям - ми тут для спілкування по душам <br />
+    <span class="hero-accent">in English</span>
   </h1>
   <p class="hero-text">
     Ми - онлайн-школа англійської для дорослих та підлітків від 14 років, в якій
