--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -1,5 +1,8 @@
 <section class="container prices">
-  <h2 class="prices-title">Плани</h2>
+  <div class="prices-title-wrapper">
+    <span class="prices-dot"></span>
+    <h2 class="prices-title">Плани</h2>
+  </div>
   <ul class="prices-list">
     <li class="prices-card">
       <h3 class="prices-card-title">Індивідуальне навчання</h3>
