--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -8,14 +8,16 @@
           src="https://soft-octave-f8d.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F4d9f58b6-8a63-44d5-abdb-5d2e202659f0%2Fb7d1b4ef-afbb-45c8-af5d-d1b26d2eec2c%2FScreenshot_2024-08-21_at_13.01.10.png?table=block&id=f444d266-8a60-4503-b22c-79d366a74ee6&spaceId=4d9f58b6-8a63-44d5-abdb-5d2e202659f0&width=480&userId=&cache=v2"
           alt="вчитель школи"
         />
-        <h3>Tanya</h3>
-        <ul>
-          <li>Досвід викладання 4+ років</li>
-          <li>Підтверджений рівень англійської С1</li>
-          <li>Філологічна освіта (Бакалавр)</li>
-          <li>Методистка нашої школи</li>
-          <li>Проходження курсів з методики на більше ніж 120+ годин</li>
-          <li>
+        <h3 class="teachers-item-title">Tanya</h3>
+        <ul class="teachers-item-list">
+          <li class="skills-item">Досвід викладання 4+ років</li>
+          <li class="skills-item">Підтверджений рівень англійської С1</li>
+          <li class="skills-item">Філологічна освіта (Бакалавр)</li>
+          <li class="skills-item">Методистка нашої школи</li>
+          <li class="skills-item">
+            Проходження курсів з методики на більше ніж 120+ годин
+          </li>
+          <li class="skills-item">
             З радістю обговорить на уроках з вами серіал The Office та буде
             спонукати до правильної вимови слів.
           </li>
@@ -27,17 +29,19 @@
           src="https://soft-octave-f8d.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F4d9f58b6-8a63-44d5-abdb-5d2e202659f0%2Fb7d1b4ef-afbb-45c8-af5d-d1b26d2eec2c%2FScreenshot_2024-08-21_at_13.01.10.png?table=block&id=f444d266-8a60-4503-b22c-79d366a74ee6&spaceId=4d9f58b6-8a63-44d5-abdb-5d2e202659f0&width=480&userId=&cache=v2"
           alt="вчитель школи"
         />
-        <h3>Khrystyna</h3>
-        <ul>
-          <li>Досвід викладання 5+ років</li>
-          <li>Вища філологічна освіта (Диплом магістра)</li>
-          <li>Підтверджений рівень англійської С1</li>
-          <li>
+        <h3 class="teachers-item-title">Khrystyna</h3>
+        <ul class="teachers-item-list">
+          <li class="skills-item">Досвід викладання 5+ років</li>
+          <li class="skills-item">Вища філологічна освіта (Диплом магістра)</li>
+          <li class="skills-item">Підтверджений рівень англійської С1</li>
+          <li class="skills-item">
             Христина захоплюється саморозвитком, постійно навчається та підвищує
             свою кваліфікацію.
           </li>
-          <li>Обожнює читати книжки та відвідувати цікаві івенти.</li>
-          <li>
+          <li class="skills-item">
+            Обожнює читати книжки та відвідувати цікаві івенти.
+          </li>
+          <li class="skills-item">
             Христина відкрита, добра, сучасна та завжди відкрита до всього
             нового
           </li>
@@ -49,20 +53,20 @@
           src="https://soft-octave-f8d.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F4d9f58b6-8a63-44d5-abdb-5d2e202659f0%2Fb7d1b4ef-afbb-45c8-af5d-d1b26d2eec2c%2FScreenshot_2024-08-21_at_13.01.10.png?table=block&id=f444d266-8a60-4503-b22c-79d366a74ee6&spaceId=4d9f58b6-8a63-44d5-abdb-5d2e202659f0&width=480&userId=&cache=v2"
           alt="вчитель школи"
         />
-        <h3>Nastya</h3>
-        <ul>
-          <li>Досвід викладання 4+ років</li>
-          <li>Рівень англійської С1</li>
-          <li>Філологічна освітa</li>
-          <li>
+        <h3 class="teachers-item-title">Nastya</h3>
+        <ul class="teachers-item-list">
+          <li class="skills-item">Досвід викладання 4+ років</li>
+          <li class="skills-item">Рівень англійської С1</li>
+          <li class="skills-item">Філологічна освітa</li>
+          <li class="skills-item">
             Досвід викладання дітям, підліткам, дорослим, у індивідуальному,
             праному та груповому форматі. Досвід підготовки до НМТ/ЗНО
           </li>
-          <li>
+          <li class="skills-item">
             Полюбляє читати книжки про психологію, дивитись серіали, малювати та
             проводити час з друзями.
           </li>
-          <li>
+          <li class="skills-item">
             Особливо полюбляє грати в настольні ігри, тому на заняттях будете
             грати в Alias та Monopoly.
           </li>
@@ -74,18 +78,20 @@
           src="https://soft-octave-f8d.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F4d9f58b6-8a63-44d5-abdb-5d2e202659f0%2Fb7d1b4ef-afbb-45c8-af5d-d1b26d2eec2c%2FScreenshot_2024-08-21_at_13.01.10.png?table=block&id=f444d266-8a60-4503-b22c-79d366a74ee6&spaceId=4d9f58b6-8a63-44d5-abdb-5d2e202659f0&width=480&userId=&cache=v2"
           alt="вчитель школи"
         />
-        <h3>Yulia</h3>
-        <ul>
-          <li>Досвід викладання 5+ років</li>
-          <li>Рівень англійської С1</li>
-          <li>Філологічна освіта</li>
-          <li>
+        <h3 class="teachers-item-title">Yulia</h3>
+        <ul class="teachers-item-list">
+          <li class="skills-item">Досвід викладання 5+ років</li>
+          <li class="skills-item">Рівень англійської С1</li>
+          <li class="skills-item">Філологічна освіта</li>
+          <li class="skills-item">
             Юлія, справжній креативний дух, завжди готова ділитись своїми
             подорожами та враженнями. Також в неї двоє чарівних котів, які
             завжди додають затишку у її життя.
           </li>
-          <li>Вміє зробити навчання легким і цікавим.</li>
-          <li>Юлія завжди готова підтримати вас на уроках та поза ними.</li>
+          <li class="skills-item">Вміє зробити навчання легким і цікавим.</li>
+          <li class="skills-item">
+            Юлія завжди готова підтримати вас на уроках та поза ними.
+          </li>
         </ul>
       </li>
       <li class="teachers-item swiper-slide">
@@ -94,23 +100,26 @@
           src="https://soft-octave-f8d.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F4d9f58b6-8a63-44d5-abdb-5d2e202659f0%2Fb7d1b4ef-afbb-45c8-af5d-d1b26d2eec2c%2FScreenshot_2024-08-21_at_13.01.10.png?table=block&id=f444d266-8a60-4503-b22c-79d366a74ee6&spaceId=4d9f58b6-8a63-44d5-abdb-5d2e202659f0&width=480&userId=&cache=v2"
           alt="вчитель школи"
         />
-        <h3>Kate</h3>
-        <ul>
-          <li>Рівень англійської С1</li>
-          <li>Учасниця Erasmus та AIESEC програмах</li>
-          <li>
+        <h3 class="teachers-item-title">Kate</h3>
+        <ul class="teachers-item-list">
+          <li class="skills-item">Рівень англійської С1</li>
+          <li class="skills-item">Учасниця Erasmus та AIESEC програмах</li>
+          <li class="skills-item">
             Досвід викладання підліткам та дорослим в парному та груповому
             форматі
           </li>
-          <li>Підготовка до НМТ та IELTS</li>
-          <li>University of Tartu in Estonia (4th year of study)</li>
-          <li>Taroslav Mudryi National Law University (International Law)</li>
+          <li class="skills-item">Підготовка до НМТ та IELTS</li>
+          <li class="skills-item">
+            University of Tartu in Estonia (4th year of study)
+          </li>
+          <li class="skills-item">
+            Taroslav Mudryi National Law University (International Law)
+          </li>
         </ul>
       </li>
     </ul>
     <div class="swiper-pagination"></div>
 
-    <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   </div>
