--- a/src/scss/common/_vars.scss
+++ b/src/scss/common/_vars.scss
@@ -1,8 +1,13 @@
-$brand_color: #1c8040;
+// $brand_color: #1c8040;
 $secondary_color: #fff6be;
-$text_color: #222323;
+$text_color: #0d3d1f;
+$brand_color: #0d3d1f;
+
 $white-color: #f6f5f5;
 $hover-color: #186c36;
-$background-color: #f1ebbf;
-$accent-color: #118509;
+// $background-color: #fffcec;
+$background-color: #fff;
+
 $contrast-color: #801c5c;
+$pink-color: #bec7ff;
+$second-background-color: #eef3fa;
