--- a/src/partials/founder.html
+++ b/src/partials/founder.html
@@ -1,17 +1,39 @@
-<section class="container founder">
+<!-- <section class="container founder">
   <h2 class="founder-title">Наша засновниця</h2>
   <div class="founder-block">
-    <img
-      class="founder-img"
-      src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png"
-      alt="застовниця школи"
-    />
+
     <div class="founder-info">
       <p class="founder-name">Karina</p>
       <p class="founder-description">
         У вас завжди буде домашнє завдання на платформі, після виконання якого,
         ви отримуєте фідбек від викладача. В кінці кожного уроку, вчитель також
         надає вам фідбек про урок.
+      </p>
+    </div>
+  </div>
+</section> -->
+<section class="founder container">
+  <img
+    class="founder-img"
+    src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png"
+    alt="застовниця школи"
+  />
+  <div class="founder-card">
+    <div class="founder-title-wrapper">
+      <span class="founder-dot"></span>
+      <h3 class="founder-title">Наша засновниця</h3>
+    </div>
+    <div class="founder-content">
+      <p class="founder-name">Karina</p>
+      <hr class="founder-divider" />
+
+      <p class="founder-text">
+        With over a decade of experience as a landlord, I know exactly what the
+        daily challenges of property rental management are. From handling tenant
+        inquiries and sharing property details, to preparing leases, tracking
+        payments, managing inventory, and finalizing deposits. These tasks
+        require landlords to manage repetitive processes at every step with
+        every rental property. That's why... less time-consuming.
       </p>
     </div>
   </div>
