--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,24 +1,32 @@
-<section>
-  <h2>Твій перший крок у вивченні англійської самостійно.</h2>
-  <p>
+<section class="container products">
+  <h2 class="products-title">
+    Твій перший крок у вивченні англійської самостійно.
+  </h2>
+  <p class="products-text">
     В цьому гайді зібрана всі корисна інформація, поради, як почати самостійно
     вивчати мову ефективно. Всі посилання є активними, треба на них лише
     натиснути.
   </p>
-  <h3>Кому буде корисний цей гайд?</h3>
-  <ul>
-    <li>Тим, хто дуже хоче вивчати мову, але не знає з чого почати.</li>
-    <li>
+  <h3 class="products-undertitle">Кому буде корисний цей гайд?</h3>
+  <ul class="products-list">
+    <li class="products-list-item">
+      Тим, хто дуже хоче вивчати мову, але не знає з чого почати.
+    </li>
+    <li class="products-list-item">
       Тим, хто серед усієї інформації в інтернеті вже загубився шукати
       англомовні, цікаві канали або фільми.
     </li>
-    <li>Тим, хто не знає де дивитись фільми в оригінали</li>
-    <li>
+    <li class="products-list-item">
+      Тим, хто не знає де дивитись фільми в оригінали
+    </li>
+    <li class="products-list-item">
       Тим, хто хоче отримати класні ресурси з підручниками для вивчення
       англійської - безкоштовно!
     </li>
   </ul>
   <a
+    class="products-btn"
+    target="_blank"
     href="https://drive.google.com/file/d/1kEjGR-EzdElOuz0JwFtfoh4-KgGZRYIK/view?usp=sharing"
     >Відкрити</a
   >
