--- a/src/scss/booking.scss
+++ b/src/scss/booking.scss
@@ -1,1 +1,53 @@
 @import 'common/vars';
+.booking {
+  padding: 2rem;
+  text-align: center;
+  &-title {
+    font-family: 'Marcellus SC', serif;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: $brand_color;
+  }
+  &-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  &-maininfo {
+    display: flex;
+    gap: 10px;
+  }
+  &-age-group {
+  }
+  &-goal-group {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.booking-title-label {
+  display: block;
+  margin-bottom: 10px;
+  text-decoration: underline;
+}
+.booking input[type='text'] {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid $brand_color;
+  border-radius: 5px;
+}
+
+.booking button {
+  background: $brand_color;
+  color: white;
+  padding: 0.75rem;
+  border: 1px solid $brand_color;
+  font-size: 1rem;
+  border-radius: 5px;
+
+  &:hover {
+    background: $hover-color;
+  }
+}
