--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,1 +1,34 @@
 @import 'common/vars';
+/* Footer */
+.footer {
+  padding: 2rem;
+  background: $brand-color;
+  color: $secondary-color;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-logo {
+  width: 150px;
+}
+
+.contacts-title {
+  font-size: 1.5rem;
+}
+
+.contacts-list li {
+  font-size: 1rem;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+.social-list {
+  display: flex;
+  gap: 10px;
+}
+.social-item i {
+  font-size: 1.5rem;
+  color: $secondary-color;
+}
