--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -1,23 +1,65 @@
 @import 'common/vars';
+@import 'common/mixins';
 .hero {
-  padding-top: 20px;
-}
-.hero-title {
-  color: $brand_color;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-}
-.hero-text {
-}
-.hero-btn {
-  display: block;
-  background-color: $brand_color;
-  padding: 12px 18px;
-  width: 300px;
-  border-radius: 15px;
-  color: $secondary-color;
-  margin-top: 20px;
-}
-.hero-btn:hover {
-  background-color: $hover-color;
+  padding: 4rem 1.5rem;
+  // background: linear-gradient(to bottom, $secondary-color, $background-color);
+  // border-radius: 12px;
+  // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
+  &-title {
+    font-family: 'Marcellus', serif;
+    font-size: 2.3rem;
+    font-weight: 700;
+    color: $brand_color;
+    line-height: 1;
+    max-width: 800px;
+    text-transform: uppercase;
+    font-family: 'Marcellus SC', serif;
+    @media (min-width: 768px) {
+      font-size: 3.2rem;
+    }
+
+    .hero-accent {
+      color: $secondary-color;
+      display: block;
+      font-family: 'Lora', sans-serif;
+      font-style: italic;
+      font-weight: 600;
+      background-image: url('../public/accent.png');
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      transform: rotate(3deg);
+    }
+  }
+
+  &-text {
+    font-size: 1.25rem;
+    color: #444;
+    max-width: 700px;
+    margin-top: 3rem;
+    line-height: 1.6;
+  }
+
+  &-btn {
+    display: inline-block;
+    margin-top: 1.5rem;
+    padding: 0.8rem 2rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white;
+    background-color: $brand-color;
+    border-radius: 8px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #0a6330;
+      transform: scale(1.05);
+    }
+  }
 }
