--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -1,1 +1,75 @@
 @import 'common/vars';
+
+.products {
+  padding: 3rem;
+  text-align: center;
+  background: $background-color;
+  border-radius: 10px;
+}
+
+.products-title {
+  text-transform: uppercase;
+  font-family: 'Marcellus SC', serif;
+  font-size: 2rem;
+  color: $text_color;
+  position: relative;
+}
+
+.products-title::after {
+  content: '';
+  display: block;
+  width: 80px;
+  height: 4px;
+  background: $pink-color;
+  margin: 10px auto;
+}
+
+.products-text {
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+}
+
+.products-list {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  padding: 1rem;
+  background: url('/images/products-bg.jpg') no-repeat center/cover;
+  border-radius: 10px;
+}
+
+.products-list-item {
+  background: $white-color;
+  padding: 1rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+  position: relative;
+  border-bottom: 6px solid $pink-color;
+
+  border-right: 6px solid $pink-color;
+  &:hover {
+    transform: scale(1.05);
+    background-color: $background-color;
+  }
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: -10px;
+  //   left: 10px;
+  //   width: 40px;
+  //   height: 4px;
+  //   background: $pink-color;
+  // }
+}
+
+.products-btn {
+  display: inline-block;
+  padding: 0.75rem 1.5rem;
+  background: $brand-color;
+  color: $background-color;
+  border-radius: 5px;
+  &:hover {
+    background: $hover-color;
+  }
+}
